--- a/src/config.yaml
+++ b/src/config.yaml
@@ -38,4 +38,6 @@ mappings:
     - login5.spotify.com 
     - apresolve.spotify.com 
     - api-partner.spotify.com
+    - challenge.spotify.com
+    - clienttoken.spotify.com
   address: 35.186.224.31:443
